# LinkedinBot

./: .env-sample  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  messages.py  pyproject.toml  requirements.txt
Linkedin/: __init__.py  errors.py
LinkedinBot/: bot.py  config.py  linkedin.py  logger.py  settings.py  utils.py
LinkedinBot/linkedin/: crawler.py
