[project]
name = "linkedin-bot"
version = "0.1.0"
description = "a telegram bot to download media from linkedin.com"
authors = [{ name = "Amir Aref", email = "amiraref808@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "python-telegram-bot[socks]>=22.0",
    "requests>=2.32.3",
]

readme = "README.md"

[tool.uv]
package = false

